--- a/.github/workflows/build-ffmpeg.yml
+++ b/.github/workflows/build-ffmpeg.yml
@@ -10,14 +10,22 @@ jobs:
         include:
           - os: macos-latest
             arch: arm64
+            shell: bash
           - os: macos-latest
             arch: x86_64
+            shell: bash
           - os: ubuntu-latest
             arch: i686
+            shell: bash
           - os: ubuntu-latest
             arch: x86_64
+            shell: bash
           - os: windows-latest
             arch: AMD64
+            shell: 'msys2 {0}'
+    defaults:
+      run:
+        shell: ${{ matrix.shell }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
@@ -29,6 +37,11 @@ jobs:
           brew update
           brew install pkg-config
           brew unlink gettext libidn2 libpng libtiff libunistring unbound
+      - uses: msys2/setup-msys2@v2
+        if: matrix.os == 'windows-latest'
+        with:
+          install: base-devel nasm
+          path-type: inherit
       - name: Build FFmpeg
         env:
           CIBW_ARCHS: ${{ matrix.arch }}
@@ -43,7 +56,6 @@ jobs:
           pip install cibuildwheel
           cibuildwheel --output-dir output
           rm -f output/*.whl
-        shell: bash
       - name: Upload FFmpeg
         uses: actions/upload-artifact@v1
         with:
