--- a/.github/workflows/build-ffmpeg.yml
+++ b/.github/workflows/build-ffmpeg.yml
@@ -22,7 +22,7 @@ jobs:
             shell: bash
           - os: windows-latest
             arch: AMD64
-            shell: 'msys2 {0}'
+            shell: msys2bash
     defaults:
       run:
         shell: ${{ matrix.shell }}
@@ -37,11 +37,6 @@ jobs:
           brew update
           brew install pkg-config
           brew unlink gettext libidn2 libpng libtiff libunistring unbound
-      - uses: msys2/setup-msys2@v2
-        if: matrix.os == 'windows-latest'
-        with:
-          install: base-devel nasm
-          path-type: inherit
       - name: Build FFmpeg
         env:
           CIBW_ARCHS: ${{ matrix.arch }}
