--- a/.github/workflows/build-ffmpeg.yml
+++ b/.github/workflows/build-ffmpeg.yml
@@ -35,6 +35,9 @@ jobs:
           - os: windows-latest
             arch: AMD64
             shell: 'msys2 {0}'
+          - os: ubuntu-24.04-arm
+            arch: aarch64
+            shell: bash
     defaults:
       run:
         shell: ${{ matrix.shell }}
@@ -71,79 +74,6 @@ jobs:
           pip install cibuildwheel delvewheel
           cibuildwheel --output-dir output
           rm -f output/*.whl
-      - name: Upload FFmpeg
-        uses: actions/upload-artifact@v4
-        with:
-          name: output-${{ matrix.os }}-${{ matrix.arch }}
-          path: output/
-
-  build-qemu-stage-1:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        arch: [aarch64]
-        os: [ubuntu-latest]
-    env:
-      stage: 1
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Build FFmpeg dependencies
-        run: |
-          docker run -v $PWD:/project:rw --workdir=/project quay.io/pypa/manylinux2014_${{ matrix.arch }} bash -exc '
-            export PATH=/opt/python/cp39-cp39/bin:$PATH;
-            export CIBUILDWHEEL=1;
-            python scripts/build-ffmpeg.py /tmp/vendor --enable-gpl --stage ${{ env.stage }};
-            cp -ar /tmp/vendor /project;
-          '
-        shell: bash
-      - uses: actions/upload-artifact@v4
-        with:
-          name: stage-1-${{ matrix.os }}-${{ matrix.arch }}
-          path: vendor
-
-  build-qemu-stage-2:
-    needs: build-qemu-stage-1
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        arch: [aarch64]
-        os: [ubuntu-latest]
-    env:
-      stage: 2
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - uses: actions/download-artifact@v4
-        with:
-          name: stage-1-${{ matrix.os }}-${{ matrix.arch }}
-          path: vendor
-      - name: Build FFmpeg
-        env:
-          CIBW_ARCHS: ${{ matrix.arch }}
-          CIBW_BEFORE_ALL_LINUX: |
-            yum install -y openssl-devel
-            cp -ar vendor /tmp
-          CIBW_BEFORE_BUILD: python scripts/build-ffmpeg.py /tmp/vendor --enable-gpl --stage ${{ env.stage }}
-          CIBW_BUILD: cp39-*
-          CIBW_REPAIR_WHEEL_COMMAND_LINUX: LD_LIBRARY_PATH=/tmp/vendor/lib:$LD_LIBRARY_PATH auditwheel repair -w {dest_dir} {wheel}
-          CIBW_SKIP: "*musllinux*"
-          CIBW_TEST_COMMAND: python -c "import dummy"
-        run: |
-          pip install cibuildwheel
-          cibuildwheel --output-dir output
-          rm -f output/*.whl
-        shell: bash
       - name: Upload FFmpeg
         uses: actions/upload-artifact@v4
         with:
