--- a/.github/workflows/build-ffmpeg.yml
+++ b/.github/workflows/build-ffmpeg.yml
@@ -26,18 +26,25 @@ jobs:
           - os: macos-13
             arch: x86_64
             shell: bash
+          - os: ubuntu-24.04-arm
+            arch: aarch64
+            shell: bash
           - os: ubuntu-24.04
             arch: i686
             shell: bash
           - os: ubuntu-24.04
             arch: x86_64
             shell: bash
+          - os: windows-11-arm
+            arch: ARM64
+            shell: 'msys2 {0}'
+            msys_prefix: mingw-w64-clang-aarch64
+            msys_system: CLANGARM64
           - os: windows-latest
             arch: AMD64
             shell: 'msys2 {0}'
-          - os: ubuntu-24.04-arm
-            arch: aarch64
-            shell: bash
+            msys_prefix: mingw-w64-x86_64
+            msys_system: MINGW64
     defaults:
       run:
         shell: ${{ matrix.shell }}
@@ -55,11 +62,11 @@ jobs:
           brew update
           brew unlink gettext libidn2 libpng libtiff libunistring libx11 libxau libxcb libxdmcp little-cms2 unbound
       - uses: msys2/setup-msys2@v2
-        if: matrix.os == 'windows-latest'
+        if: matrix.os == 'windows-latest' || matrix.os == 'windows-11-arm'
         with:
-          install: base-devel mingw-w64-x86_64-gcc mingw-w64-x86_64-gperf mingw-w64-x86_64-nasm openssl-devel
-          path-type: inherit
-          release: false
+          install: base-devel openssl-devel ${{ matrix.msys_prefix }}-gcc ${{ matrix.msys_prefix }}-gperf ${{ matrix.msys_prefix }}-nasm
+          msystem: ${{ matrix.msys_system }}
+          #path-type: inherit
       - name: Build FFmpeg
         env:
           CIBW_ARCHS: ${{ matrix.arch }}
